--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -494,8 +494,8 @@ This is the so-called ``cold death'' scenario in cosmology.
 Why do we seem to escape this scenario in lattice quantum field theory? This is definitely not related to the details of the physical interactions, and in particular of the choice of the graviton model we could use, since the reincarnation theorem doesn't depend on the exact form of the elementary evolution operator $\op U_\tau$.
 The situation would certainly look different if the elementary evolution operator would change across time, which would probably be the case if we computed a semi-classical gravitational background at each time step, for instance.
 But for now, with a constant elementary evolution operator, the model cannot account for an expansion of space-time; the galaxies, if they are drifting apart consequently to a ``big bang'' event, would meet again after having traveled through half of the universe because of its toroidal character.
-This would be king of a ``big crunch'' event (but not due to a contraction of space-time) which would be followed by another ``big bang'' event that could possibly yield to the formation of another Milky Way and of another Earth on which your subjective experiences could be ``reincarnated''.
-This conception is quite similar to the Buddhist cosmology, in which the world is supposed to be periodically destructed and re-created.
+This would be kind of a ``big crunch'' event (but not due to a contraction of space-time) which would be followed by another ``big bang'' event that could possibly yield to the formation of another Milky Way and of another Earth on which your subjective experiences could be ``reincarnated''.
+This conception is quite similar to Buddhist cosmogony, where the world is supposed to be periodically destructed and re-created.
 
 There are several ways of questioning the reality of this ``reincarnation'' in a purely scientific approach.
 The reincarnation theorem relies on the finite dimensionality of the Hilbert space of quantum states, and thus on the assumption that the physical space itself is discrete and finite, which has elusive, but in principle measurable consequences.
