Removed "Lattice" from the title

--- a/frontmatter-title-page.tex
+++ b/frontmatter-title-page.tex
@@ -6,7 +6,7 @@
 {\Huge \textbf{Quantum\\Ethics}}
 \vskip 1.2cm
 A Spinozist Interpretation\\
-of Lattice Quantum Field Theory
+of Quantum Field Theory
 \vskip 2cm
 {\large Sébastien Fauvel}
 \end{center}
