--- a/quantum-ethics.tex
+++ b/quantum-ethics.tex
@@ -10,7 +10,7 @@
 \usepackage[american]{babel}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
-\usepackage[pdftex,pdfauthor=Sébastien\ Fauvel,pdftitle=Quantum\ Ethics:\ A\ Spinozist\ Interpretation\ of\ Lattice\ Quantum\ Field\ Theory]{hyperref}
+\usepackage[pdftex,pdfauthor=Sébastien\ Fauvel,pdftitle=Quantum\ Ethics:\ A\ Spinozist\ Interpretation\ of\ Quantum\ Field\ Theory]{hyperref}
 \usepackage{appendix}
 %\usepackage{makeidx}
 \usepackage{latexsym}
